Turn off GN TE analog support
Turn off TE ANALOG support to avoid "error config tlmm" error

--- a/drivers/misc/gn/Kconfig
+++ b/drivers/misc/gn/Kconfig
@@ -22,7 +22,7 @@ config GN_CAMERA_SUPPORT
 
 config GN_Q_BSP_LCD_TE_ANALOG_SUPPORT
 	bool "GN_Q_BSP_LCD_TE_ANALOG_SUPPORT"
-	default y
+	default n
 
 config GN_Q_BSP_BACKLIGHT_LM3630_SUPPORT
 	bool "GN_Q_BSP_BACKLIGHT_LM3630_SUPPORT"
