Rewrite reset function,remove gionee buggy Q_BSP_LCD_RESET_SUPPORT, add correct FB split function

--- a/arch/arm/boot/dts/msm8974-mdss.dtsi
+++ b/arch/arm/boot/dts/msm8974-mdss.dtsi
@@ -103,6 +103,7 @@
 		mdss_fb0: qcom,mdss_fb_primary {
 			cell-index = <0>;
 			compatible = "qcom,mdss-fb";
+			qcom,mdss-fb-split = <720 720>;
 			qcom,memory-reservation-type = "EBI1";
 			qcom,memory-reservation-size = <0x2000000>;
 			qcom,memblock-reserve = <0x03200000 0x01E00000>;
