--- a/drivers/misc/gn/Kconfig
+++ b/drivers/misc/gn/Kconfig
@@ -35,7 +35,7 @@ config GN_Q_BSP_LCD_TPS65132_SUPPORT
 
 config GN_Q_BSP_LCD_RESET_SUPPORT
 	bool "GN_Q_BSP_LCD_RESET_SUPPORT"
-	default y
+	default n
 
 config GN_Q_BSP_LCD_COMPATIBILITY_SUPPORT
 	bool "GN_Q_BSP_LCD_COMPATIBILITY_SUPPORT"
