--- a/arch/arm/boot/dts/msm8974-mtp.dtsi
+++ b/arch/arm/boot/dts/msm8974-mtp.dtsi
@@ -13,6 +13,7 @@
  
 /include/ "msm8974-camera-sensor-mtp.dtsi"
 /include/ "msm8974-leds.dtsi"
+/include/ "msm8974-clock.dtsi"
 
 / {
 	aliases {
@@ -46,22 +47,21 @@
 
 	i2c@f9924000 {
 		synaptics@20 {
-			compatible = "synaptics,dsx";
+			status = "ok";
+			compatible = "synaptics,dsx-i2c";
 			reg = <0x20>;
 			interrupt-parent = <&msmgpio>;
-			interrupts = <61 0x2>;
+			interrupts = <61 0x2008>;
 			vdd-supply = <&pm8941_l18>;
 			vcc_i2c-supply = <&pm8941_lvs1>;
-			synaptics,reset-gpio = <&msmgpio 60 0x00>;
-			synaptics,reset-delay-ms = <100>;
-			synaptics,reset-on-state = <1>;
+			synaptics,pwr-reg-name = "vdd";
+			synaptics,bus-reg-name = "vcc_i2c";
+			synaptics,irq-gpio = <&msmgpio 61 0x2008>; /* IRQF_ONESHOT | IRQF_TRIGGER_LOW */
+			synaptics,irq-on-state = <0>;
+			synaptics,power-delay-ms = <200>;
+			synaptics,reset-delay-ms = <200>;
+			synaptics,reset-on-state = <0>;
 			synaptics,reset-active-ms = <20>;
-			synaptics,irq-gpio = <&msmgpio 61 0x0>;
-			synaptics,irq-flags = <2>;
-			synaptics,power-gpio = <&msmgpio 0x55 0x0>;
-			synaptics,cap-button-map = <139 172 158>;
-			synaptics,power-on-state = <1>;
-			synaptics,power-delay-ms = <160>;
 			synaptics,max-y-for-2d = <2560>;
 			synaptics,fw-image-name1 = "PR1798622-s3508r_OW_000000D8.img";
 			synaptics,fw-image-name2 = "PR1798622-s3508r_OW_000000D8.img";
@@ -71,8 +71,8 @@
 			synaptics,fw-image-name6 = "PR1798622-s3508r_OW_000000D8.img";
 			synaptics,fw-image-name7 = "PR1798622-s3508r_OG_000000D8.img";
 			synaptics,fw-image-name8 = "PR1782558-s3508r_TG_000000BF.img";
-			synaptics,vir-button-codes = <0x66 0x64 0x384 0x64 0x3c 0x9e 0x12c 0x384 0x64 0x3c>;
-		};
+			synaptics,vir-button-codes = <102 100 900 100 60 158 300 900 100 60>;
+};
 
 		atmel_mxt_ts@4a {
 			compatible = "atmel,mxt-ts";
@@ -173,9 +173,9 @@
 			imagis,chip-en;
 			imagis,need-pwm-clk;
 			imagis,ext-clk-en;
-			imagis,isa1200-mclk-gpios = <&msmgpio 18 0x0>;
-			isa1200-mclk-clk = <88>;
-			imagis,hap-en-gpio = <&msmgpio 86 0x0>;
+			imagis,isa1200-mclk-gpios = <&pm8941_gpios 18 0>;
+			isa1200-mclk-clk = <&pm8941_clkdiv3>;
+			imagis,hap-en-gpio = <&msmgpio 86 0x00>;
 			imagis,max-timeout = <15000>;
 			imagis,pwm-div = <256>;
 			imagis,mode-ctrl = <2>;
@@ -274,8 +274,8 @@
 
 &pm8941_lsid1 {
 	qcom,leds@d800 {
-		status = "disabled";
-		/*qcom,wled_0 {
+		status = "okay";
+		qcom,wled_0 {
 			label = "wled";
 			linux,name = "wled:backlight";
 			linux,default-trigger = "bkl-trigger";
@@ -290,7 +290,7 @@
 			qcom,ovp-val = <2>;
 			qcom,num-strings = <3>;
 			qcom,id = <0>;
-		};*/
+		};
 	};
 
 	qcom,leds@d900 {
@@ -704,6 +704,7 @@
 		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
 		qcom,pull = <4>;	/* QPNP_PIN_PULL_DN */
 		qcom,master-en = <1>;
+		qcom,vin-sel = <2>; /* add PM8941 S3 = 1.8 V */ 
 	};
 
 	gpio@e000 { /* GPIO 33 */
@@ -768,7 +769,8 @@
 	mpp@a700 { /* MPP 8 */
 		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
 		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,master-en = <1>;
+		qcom,vin-sel = <2>; /* PM8941_S3 1.8V > 1.6V */
+		//qcom,master-en = <1>; /* ENABLE MPP */
 	};
 };
 
