--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -976,60 +976,6 @@ config TOUCHSCREEN_GEN_VKEYS
          To compile this driver as a module, choose M here: the
          module will be called gen_vkeys.
 
-config GN_Q_BSP_TP_SYNAPTICS_SUPPORT
-    tristate "Gionee Synaptics DSX rmi4 I2C touchscreen"
-    depends on I2C
-    help
-      Say Y here if you have a Synaptics DSX I2C touchscreen
-      connected to your system.
-
-      If unsure, say N.
-
-      To compile this driver as a module, choose M here: the
-      module will be called synaptics_i2c_rmi4.
-
-config TOUCHSCREEN_SYNAPTICS_I2C_RMI4
-	tristate "Synaptics DSX I2C touchscreen"
-	depends on I2C
-	help
-	  Say Y here if you have a Synaptics DSX I2C touchscreen
-	  connected to your system.
-
-	  If unsure, say N.
-
-	  To compile this driver as a module, choose M here: the
-	  module will be called synaptics_i2c_rmi4.
-
-config TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV
-	tristate "Gionee Synaptics I2C touchscreen rmi device"
-	depends on GN_Q_BSP_TP_SYNAPTICS_SUPPORT
-	help
-	  This enables support for character device channel for Synaptics
-	  RMI4 touchscreens.
-
-	  Say Y here if you have a Synaptics DSX I2C touchscreen
-	  connected to your system.
-
-	  If unsure, say N.
-
-	  To compile this driver as a module, choose M here: the
-	  module will be called synaptics_dsx_rmi4_dev.
-
-config TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE
-	tristate "Gionee Synaptics I2C touchscreen firmware update"
-	depends on GN_Q_BSP_TP_SYNAPTICS_SUPPORT
-	help
-	  This enables support for firmware update for Synaptics RMI4
-	  touchscreens.
-
-	  Say Y here if you have a Synaptics DSX I2C touchscreen
-	  connected to your system.
-
-	  If unsure, say N.
-
-	  To compile this driver as a module, choose M here: the
-	  module will be called synaptics_dsx_fw_update.
-
 config SECURE_TOUCH
 	bool "Secure Touch"
 	depends on TOUCHSCREEN_ATMEL_MXT
@@ -1050,5 +996,12 @@ config TOUCHSCREEN_GT9XX
           If unsure, say N.
 
 source "drivers/input/touchscreen/gt9xx/Kconfig"
+
+config TOUCHSCREEN_SYNAPTICS_DSX
+	bool "IUNI U3 synaptics touchpanel"
+	depends on I2C
+	help
+	  Say Y if U have IUNI U3 device
+source "drivers/input/touchscreen/synaptics_dsx/Kconfig"
 
 endif
