Integrations of remaining elements
100% of the elements of the IUNI U3 are now integrated! :+1:

--- a/arch/arm/boot/dts/msm8974-mdss.dtsi
+++ b/arch/arm/boot/dts/msm8974-mdss.dtsi
@@ -35,7 +35,8 @@
 		qcom,mdss-ab-factor = <2 1>;		/* 2 times    */
 		qcom,mdss-ib-factor = <6 5>;		/* 1.2 times  */
 		qcom,mdss-clk-factor = <5 4>;		/* 1.25 times */
-		qcom,mdss-ib-factor-overlap = <7 4>;	/* 1.75 times  */
+		/*Gionee xiangzhong 2014-07-22 add for 4k video*/
+		qcom,mdss-ib-factor-overlap = <7 4>;    /* 1.75 times  */
 
 		qcom,max-clk-rate = <320000000>;
 		qcom,mdss-pipe-vig-off = <0x00001200 0x00001600
@@ -103,6 +104,10 @@
 		mdss_fb0: qcom,mdss_fb_primary {
 			cell-index = <0>;
 			compatible = "qcom,mdss-fb";
+			qcom,memory-reservation-type = "EBI1";
+//Gionee xiangzhong modify for 2k(2560x1440x4x2) cmd panel begin
+			qcom,memory-reservation-size = <0x2000000>;
+//Gionee xiangzhong modify for 2k cmd panel begin
 			qcom,memblock-reserve = <0x03200000 0x01E00000>;
 		};
 
@@ -132,6 +137,12 @@
 		qcom,mdss-mdp = <&mdss_mdp>;
 		qcom,platform-reset-gpio = <&pm8941_gpios 19 0>;
 		qcom,platform-enable-gpio = <&msmgpio 58 0>;
+/*Gionee xiangzhongg 2014-04-12 add for tps65132 -5v enable begin*/
+		qcom,tps-enable-gpio = <&msmgpio 46 0>;
+/*Gionee xiangzhongg 2014-04-12 add for tps65132 -5v enable end*/
+/*Gionee xiangzhongg 2014-04-30 add for 1v8 control gpio begin*/
+		qcom,iovcc-enable-gpio = <&msmgpio 53 0>;
+/*Gionee xiangzhongg 2014-04-30 add for 1v8 control gpio begin*/
 		qcom,platform-te-gpio = <&msmgpio 12 0>;
 		qcom,platform-strength-ctrl = [ff 06];
 		qcom,platform-bist-ctrl = [00 00 b1 ff 00 00];
