cma: Increase the default number of regions
The total number of CMA regions that can be created is statically
decided at compile time via a config option. Incoming memory map
changes increase the number of CMA regions significantly across
almost all targets. Rather than make every target set the CONFIG,
just increase the default number. The additional overhead is very
small.

Change-Id: I2f60ee56b43c256f3bfa4d1e3ab95a8f378568ab
Signed-off-by: Laura Abbott <lauraa@codeaurora.org>

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,7 @@ GTAGS
 \#*#
 
 arch/arm/mach-msm/oppo/
+
+arch/arm/configs/cyanogenmod_bacon_defconfig
+
+arch/arm/configs/cyanogenmod_find7_defconfig
