--- a/drivers/video/msm/mdss/Makefile
+++ b/drivers/video/msm/mdss/Makefile
@@ -45,6 +45,8 @@ obj-$(CONFIG_FB_MSM_MDSS) += mdss_fb.o
 
 obj-$(CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS) += mdss_dsi_status.o
 
+obj-$(CONFIG_FB_MSM_MDSS) += mdss_livedisplay.o
+
 #Gionee xiangzhong add for tps65132 and lm3630
 obj-y += lm3630.o
 obj-y += tps65132.o
