msm8974: Enable ULPS for all command mode panels

--- a/arch/arm/boot/dts/dsi-panel-sharp-r63419-dualmipi1-cmd.dtsi
+++ b/arch/arm/boot/dts/dsi-panel-sharp-r63419-dualmipi1-cmd.dtsi
@@ -59,5 +59,6 @@
                 qcom,mdss-dsi-te-dcs-command = <1>;
                 qcom,mdss-dsi-te-check-enable;
                 qcom,mdss-dsi-te-using-te-pin;
+		qcom,ulps-enabled; 
 	};
 };
