--- a/arch/arm/boot/dts/dsi-panel-truly-r63419-dualmipi0-cmd.dtsi
+++ b/arch/arm/boot/dts/dsi-panel-truly-r63419-dualmipi0-cmd.dtsi
@@ -145,5 +145,6 @@
 		qcom,mdss-dsi-off-command = [05 01 00 00 32 00 02 28 00
 					05 01 00 00 78 00 02 10 00];
 		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
+		qcom,ulps-enabled; 
 	};
 };
