Reorganization of defconfig

--- a/arch/arm/configs/lineageos_u3_defconfig
+++ b/arch/arm/configs/lineageos_u3_defconfig
@@ -607,58 +607,65 @@ CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 
+
 ###################
 # Gionee Specific #
 ###################
 
-#Audio
-CONFIG_GN_Q_BSP_AUDIO_HEADSET_SUPPORT=y	
-CONFIG_GN_Q_BSP_AUDIO_MBHC_CALIBRATION=y
-
 #Camera
-CONFIG_GN_SUNNY_OV4688=y
 CONFIG_GN_CAMERA_SUPPORT=y
+CONFIG_GN_SUNNY_OV4688=y
+
+#Misc
+CONFIG_GN_Q_BSP_ISA1200_LEVEL_SUPPORT=y
+CONFIG_GN_Q_BSP_ISA1200_QPNPCLK_SUPPORT=y
 
 #Power
-CONFIG_GN_Q_BSP_CHARGE_VOLTAGE_SUPPORT=y
 CONFIG_GN_Q_BSP_BTC_CONFIG_SUPPORT=y
-CONFIG_GN_Q_BSP_PM_CHG_DEBUG_SUPPORT=y 
-CONFIG_GN_Q_BSP_PMIC_DISABLE_LOW_TM_INTERRUPTS_SUPPORT=y
+CONFIG_GN_Q_BSP_CHARGE_VOLTAGE_SUPPORT=y
 CONFIG_GN_Q_BSP_PM8941_CHARGER_SUPPORT=y
-CONFIG_GN_DEVICE_TYPE_CHECK=y
-CONFIG_GN_Q_BSP_ISA1200_QPNPCLK_SUPPORT=y
-CONFIG_GN_Q_BSP_ISA1200_LEVEL_SUPPORT=y
-CONFIG_GN_Q_BSP_KERNEL_RTC_ALARM_SUPPORT=y	
-CONFIG_GN_Q_BSP_PM_NON_STANDARD_CHARGER_SUPPORT=y
+CONFIG_GN_Q_BSP_PMIC_DISABLE_LOW_TM_INTERRUPTS_SUPPORT=y
+CONFIG_GN_Q_BSP_PM_CHG_DEBUG_SUPPORT=y
+
+#RTC
+CONFIG_GN_Q_BSP_KERNEL_RTC_ALARM_SUPPORT=y
 
 #Screen
-CONFIG_GN_Q_BSP_LCD_TPS65132_SUPPORT=y
+CONFIG_GN_DEVICE_TYPE_CHECK=y
+CONFIG_GN_Q_BSP_BACKLIGHT_LM3630_SUPPORT=y
 CONFIG_GN_Q_BSP_LCD_IOVCC_CONTROL_SUPPORT=y
 CONFIG_GN_Q_BSP_LCD_RESET_SUPPORT=y
-CONFIG_GN_Q_BSP_BACKLIGHT_LM3630_SUPPORT=y
+CONFIG_GN_Q_BSP_LCD_TPS65132_SUPPORT=y
+
+#Sound
+CONFIG_GN_Q_BSP_AUDIO_HEADSET_SUPPORT=y
+CONFIG_GN_Q_BSP_AUDIO_MBHC_CALIBRATION=y
 
 #Touchscreen
 CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX=y
-CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
-# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_SPI is not set
-# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C is not set
 CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_CORE=y
-CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
 CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
-# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING is not set
-# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_PROXIMITY is not set
-# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_ACTIVE_PEN is not set
-# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_DEBUG is not set
+CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
+CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
+
+#USB
+CONFIG_GN_Q_BSP_PM_NON_STANDARD_CHARGER_SUPPORT=y
 
 #Disabled
+# CONFIG_GN_CDROM_SUPPORT is not set
+# CONFIG_GN_Q_BSP_BMS_OPTIMIZE_PHONE_RESTART_SOC_SUPPORT is not set
+# CONFIG_GN_Q_BSP_BMS_OPTIMIZE_SOC_SUPPORT is not set
+# CONFIG_GN_Q_BSP_DEVICE_TYPE_CHECK_SUPPORT is not set
+# CONFIG_GN_Q_BSP_ENFORCE_EMMC_TIMEOUT_SUPPORT is not set
+# CONFIG_GN_Q_BSP_LCD_TE_ANALOG_SUPPORT is not set
+# CONFIG_GN_Q_BSP_LK_DISABLE_EMMC_HS400 is not set
+# CONFIG_GN_Q_BSP_NO_DOWNLOAD_MODE is not set
 # CONFIG_GN_Q_BSP_OPTIMIZE_SOC_SUPPORT is not set
 # CONFIG_GN_Q_BSP_OVP_9P5V_SUPPORT is not set
-# CONFIG_GN_Q_BSP_BMS_OPTIMIZE_PHONE_RESTART_SOC_SUPPORT is not set
 # CONFIG_GN_Q_BSP_PM_BMS_LOG_SUPPORT is not set
-# CONFIG_GN_Q_BSP_BMS_OPTIMIZE_SOC_SUPPORT is not set
-# CONFIG_GN_Q_BSP_ENFORCE_EMMC_TIMEOUT_SUPPORT is not set
-# CONFIG_GN_Q_BSP_LK_DISABLE_EMMC_HS400 is not set
-# CONFIG_GN_CDROM_SUPPORT is not set
-# CONFIG_GN_Q_BSP_DEVICE_TYPE_CHECK_SUPPORT is not set
-# CONFIG_GN_Q_BSP_LCD_TE_ANALOG_SUPPORT is not set
-# CONFIG_GN_Q_BSP_NO_DOWNLOAD_MODE is not set
+# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_ACTIVE_PEN is not set
+# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_DEBUG is not set
+# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_PROXIMITY is not set
+# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C is not set
+# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_SPI is not set
+# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING is not set
