Add cci sensor driver

--- a/arch/arm/configs/msm8974_defconfig
+++ b/arch/arm/configs/msm8974_defconfig
@@ -79,7 +79,7 @@ CONFIG_SENSORS_ADSP=y
 CONFIG_MSM_RTB=y
 CONFIG_MSM_RTB_SEPARATE_CPUS=y
 CONFIG_MSM_CACHE_ERP=y
-CONFIG_MSM_L1_ERR_PANIC=n
+#CONFIG_MSM_L1_ERR_PANIC=y
 CONFIG_MSM_L1_RECOV_ERR_PANIC=y
 CONFIG_MSM_L1_ERR_LOG=y
 #CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS=y
@@ -136,6 +136,7 @@ CONFIG_IP_PNP_DHCP=y
 CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
+# CONFIG_INET_XFRM_MODE_BEET is not set
 # CONFIG_INET_LRO is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
@@ -264,7 +265,6 @@ CONFIG_RFKILL=y
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
 CONFIG_CMA=y
-CONFIG_CMA_AREAS=15
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_UID_STAT=y
@@ -592,6 +592,9 @@ CONFIG_PFT=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 CONFIG_MSM_RDBG=m
+CONFIG_MSM_AVTIMER=y
+CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
+CONFIG_UID_CPUTIME=y
 #Gionee luliya 201404015 add for tp driver begin
 CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX=y
 CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
