defconfig: fix compilation: qpnp-charger.c
Fix compilation error:
qpnp-charger.c:function qpnp_chg_reduce_power_stage_work: error: undefined reference to 'alarm_start_range'

--- a/arch/arm/configs/lineageos_u3_defconfig
+++ b/arch/arm/configs/lineageos_u3_defconfig
@@ -1,4 +1,5 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
+# CONFIG_ARM_UNWIND is not set
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-lineageos"
 CONFIG_KERNEL_XZ=y
@@ -370,7 +371,7 @@ CONFIG_POWER_SUPPLY=y
 CONFIG_SMB350_CHARGER=y
 CONFIG_SMB349_USB_CHARGER=y
 CONFIG_BATTERY_BQ28400=y
-CONFIG_QPNP_CHARGER=y
+# CONFIG_QPNP_CHARGER is not set
 CONFIG_BATTERY_BCL=y
 CONFIG_QPNP_BMS=y
 CONFIG_SENSORS_EPM_ADC=y
