--- a/drivers/misc/gn/Kconfig
+++ b/drivers/misc/gn/Kconfig
@@ -6,12 +6,8 @@ config GN_CAMERA_SUPPORT
 	bool "GN_CAMERA_SUPPORT"
 	default y
 
-config GN_SUNNY_OV4688
-	bool "GN_SUNNY_OV4688"
-	default y
 
-
-#Misc
+#Haptic
 
 config GN_Q_BSP_ISA1200_LEVEL_SUPPORT
 	bool "GN_Q_BSP_ISA1200_LEVEL_SUPPORT"
@@ -47,9 +43,9 @@ config GN_Q_BSP_PM_CHG_DEBUG_SUPPORT
 
 #RTC
 
-config GN_Q_BSP_KERNEL_RTC_ALARM_SUPPORT
-	bool "GN_Q_BSP_KERNEL_RTC_ALARM_SUPPORT"
-	default y
+#config GN_Q_BSP_KERNEL_RTC_ALARM_SUPPORT
+#	bool "GN_Q_BSP_KERNEL_RTC_ALARM_SUPPORT"
+#	default y
 
 
 #Screen
@@ -109,10 +105,6 @@ config GN_Q_BSP_DEVICE_TYPE_CHECK_SUPPORT
 
 config GN_Q_BSP_ENFORCE_EMMC_TIMEOUT_SUPPORT
 	bool "GN_Q_BSP_ENFORCE_EMMC_TIMEOUT_SUPPORT"
-	default n
-
-config GN_Q_BSP_LCD_TE_ANALOG_SUPPORT
-	bool "GN_Q_BSP_LCD_TE_ANALOG_SUPPORT"
 	default n
 
 config GN_Q_BSP_LK_DISABLE_EMMC_HS400
