--- a/arch/arm/configs/lineageos_u3_defconfig
+++ b/arch/arm/configs/lineageos_u3_defconfig
@@ -608,6 +608,7 @@ CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 
 #Gionee luliya 201404015 add for tp driver begin
+CONFIG_GN_SUNNY_OV4688=y
 CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX=y
 CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
 # CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_SPI is not set
