Add IUNI U3 elements

--- a/arch/arm/boot/dts/msm8974-leds.dtsi
+++ b/arch/arm/boot/dts/msm8974-leds.dtsi
@@ -14,6 +14,8 @@
 &pm8941_lsid1 {
 	qcom,leds@d000 {
 		status = "okay";
+//Gionee liujiang 2013-08-19 modify for rgb led start
+/*
 		qcom,rgb_0 {
 			label = "rgb";
 			linux,name = "led:rgb_red";
@@ -49,6 +51,68 @@
 			qcom,id = <5>;
 			status = "disabled";
 		};
+*/
+			qcom,rgb_0 { 
+				label = "rgb"; 
+				linux,name = "red";//"led:rgb_red"; 
+				qcom,mode = "pwm"; 
+				qcom,pwm-channel = <6>; 
+				qcom,pwm-us = <1000>; 
+				qcom,max-current = <12>; 
+				qcom,default-state = "off"; 
+				qcom,id = <3>; 
+//Gionee liujiang 2013-10-15 delete for CR00921505 start
+				//linux,default-trigger = "battery-charging"; 
+//Gionee liujiang 2013-10-15 delete for CR00921505 end
+				qcom,use-blink; 
+				qcom,start-idx = <1>; 
+				qcom,duty-pcts = [95 95 95 95 95
+						95 95 95 95 95]; 
+				qcom,pause-lo = <0>; 
+				qcom,pause-hi = <0>; 
+				qcom,ramp-step-ms = <500>; 
+				qcom,lut-flags = <3>; 
+			}; 
+			qcom,rgb_1 { 
+				label = "rgb"; 
+				linux,name = "green";//"led:rgb_green";
+				qcom,mode = "pwm"; 
+				qcom,pwm-channel = <5>; 
+				qcom,pwm-us = <1000>; 
+				qcom,max-current = <12>; 
+				qcom,default-state = "off"; 
+				qcom,id = <4>; 
+//Gionee liujiang 2013-10-15 delete for CR00921505 start
+				//linux,default-trigger = "battery-full";
+//Gionee liujiang 2013-10-15 delete for CR00921505 end
+				qcom,use-blink; 
+				qcom,start-idx = <1>; 
+				qcom,duty-pcts = [95 95 95 95 95
+						95 95 95 95 95]; 
+				qcom,pause-lo = <0>; 
+				qcom,pause-hi = <0>; 
+				qcom,ramp-step-ms = <500>; 
+				qcom,lut-flags = <3>; 
+			}; 
+			qcom,rgb_2 { 
+				label = "rgb"; 
+				linux,name = "blue";//"led:rgb_blue";
+				qcom,mode = "pwm"; 
+				qcom,pwm-channel = <4>; 
+				qcom,pwm-us = <1000>; 
+				qcom,max-current = <12>; 
+				qcom,id = <5>; 
+				status = "disabled";
+				qcom,use-blink; 
+				qcom,start-idx = <1>; 
+				qcom,duty-pcts = [95 95 95 95 95
+						95 95 95 95 95]; 
+				qcom,pause-lo = <0>; 
+				qcom,pause-hi = <0>; 
+				qcom,ramp-step-ms = <500>; 
+				qcom,lut-flags = <3>; 
+			};
+//Gionee liujiang 2013-08-19 modify for rgb led end
 	};
 
 	qcom,leds@d100 {
@@ -74,7 +138,7 @@
 				"flash0_trigger";
 			qcom,id = <1>;
 			linux,name = "led:flash_0";
-			qcom,current = <625>;
+			qcom,current = <450>;   //by Gionee zhaocq 20140606 for CR01273423
 		};
 
 		pm8941_flash1: qcom,flash_1 {
@@ -90,7 +154,7 @@
 			label = "flash";
 			qcom,id = <2>;
 			linux,name = "led:flash_1";
-			qcom,current = <625>;
+			qcom,current = <450>;  //by Gionee zhaocq 20140606 for CR01273423
 		};
 
 		pm8941_torch: qcom,flash_torch {
@@ -103,7 +167,7 @@
 			label = "flash";
 			qcom,id = <2>;
 			linux,name = "led:flash_torch";
-			qcom,current = <200>;
+			qcom,current = <150>;   //by Gionee zhaocq 20140606 for CR01273423
 			qcom,torch-enable;
 		};
 	};
@@ -148,8 +212,8 @@
 
 		qcom,kpdbl2 {
 			label = "kpdbl";
-			linux,name = "kpdbl-pwm-2";
-			qcom,mode = "pwm";
+			linux,name = "kpdbl-lut-2";
+			qcom,mode = "lpg";
 			qcom,pwm-channel = <9>;
 			qcom,pwm-us = <1000>;
 			qcom,id = <7>;
