--- a/arch/arm/configs/msm8974_defconfig
+++ b/arch/arm/configs/msm8974_defconfig
@@ -270,6 +270,9 @@ CONFIG_BLK_DEV_RAM=y
 CONFIG_UID_STAT=y
 CONFIG_TSPP=m
 CONFIG_HAPTIC_ISA1200=y
+#GIONEE liujiang 2014-05-19 add for hall-key start
+CONFIG_KEY_HALL=y
+#GIONEE liujiang 2014-05-19 add for hall-key start
 CONFIG_QSEECOM=y
 CONFIG_QPNP_MISC=y
 CONFIG_USB_HSIC_SMSC_HUB=y
@@ -321,8 +324,10 @@ CONFIG_JOYSTICK_XPAD=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
+#Gionee luliya 201404015 close for tp driver begin
+CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=n
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=n
+#Gionee luliya 201404015 close for tp driver end
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_INPUT_UINPUT=y
@@ -372,6 +377,8 @@ CONFIG_VIDEO_DEV=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_DVB_CORE=m
 # CONFIG_MSM_CAMERA is not set
+CONFIG_IMX135=y
+CONFIG_GN_SUNNY_OV4688=y
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_EEPROM=y
 CONFIG_MSM_CPP=y
@@ -582,6 +589,18 @@ CONFIG_PFT=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 CONFIG_MSM_RDBG=m
-CONFIG_MSM_AVTIMER=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_UID_CPUTIME=y
+
+#Gionee luliya 201404015 add for tp driver begin
+CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX=y
+CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
+# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_SPI is not set
+CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_CORE=y
+CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
+CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
+CONFIG_GN_DEVICE_TYPE_CHECK=y
+# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING is not set
+# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_PROXIMITY is not set
+# CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_ACTIVE_PEN is not set
+#Gionee luliya 201404015 add for tp driver begin
