--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -577,6 +577,12 @@ config HAPTIC_ISA1200
 	help
 	  The ISA1200 is a high performance enhanced haptic driver.
 
+config KEY_HALL
+	tristate "Hall key support"
+	default n
+	help
+	  The Hall key is a high performance enhanced driver.
+
 config PMIC8058_PWM
 	tristate "Qualcomm PM8058 PWM support"
 	depends on PMIC8058
@@ -665,6 +671,10 @@ config TI_DRV2667
 	  To compile this driver as a module, choose M here: the
 	  module will be called ti_drv2667.
 
+config GN_DEVICE_TYPE_CHECK
+    tristate "Gionee Device Check"
+    default n
+
 config UID_CPUTIME
 	tristate "Per-UID cpu time statistics"
 	depends on PROFILING
@@ -679,4 +689,5 @@ source "drivers/misc/ti-st/Kconfig"
 source "drivers/misc/lis3lv02d/Kconfig"
 source "drivers/misc/carma/Kconfig"
 source "drivers/misc/altera-stapl/Kconfig"
+source "drivers/misc/gn/Kconfig"
 endmenu
