config: increase FRAME_WARN to prevent compilation issues
Fix the error:
warning: the frame size of 1104 bytes is larger than 1024 bytes [-Wframe-larger-than=]
error, forbidden warning: ene_ub6250.c:2118

--- a/arch/arm/configs/msm8974_defconfig
+++ b/arch/arm/configs/msm8974_defconfig
@@ -553,6 +553,7 @@ CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 CONFIG_MSM_RDBG=m
+CONFIG_FRAME_WARN=2048
 #Gionee luliya 201404015 add for tp driver begin
 CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX=y
 CONFIG_GN_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
