Clean, fixes, updates and tests

--- a/arch/arm/configs/lineageos_u3_defconfig
+++ b/arch/arm/configs/lineageos_u3_defconfig
@@ -271,7 +271,7 @@ CONFIG_KEY_HALL=y
 CONFIG_QSEECOM=y
 CONFIG_QPNP_MISC=y
 CONFIG_UID_CPUTIME=y
-CONFIG_TI_DRV2667=y
+#CONFIG_TI_DRV2667=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
@@ -357,13 +357,13 @@ CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
 CONFIG_GPIO_QPNP_PIN_DEBUG=y
-CONFIG_POWER_SUPPLY=y
-CONFIG_SMB350_CHARGER=y
-CONFIG_SMB349_USB_CHARGER=y
-CONFIG_BATTERY_BQ28400=y
+#CONFIG_POWER_SUPPLY=y
+#CONFIG_SMB350_CHARGER=y
+#CONFIG_SMB349_USB_CHARGER=y
+#CONFIG_BATTERY_BQ28400=y
 # CONFIG_QPNP_CHARGER is not set
-CONFIG_BATTERY_BCL=y
-CONFIG_QPNP_BMS=y
+#CONFIG_BATTERY_BCL=y
+#CONFIG_QPNP_BMS=y
 CONFIG_SENSORS_EPM_ADC=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_SENSORS_QPNP_ADC_CURRENT=y
