--- a/arch/arm/configs/msm8974_defconfig
+++ b/arch/arm/configs/msm8974_defconfig
@@ -79,11 +79,11 @@ CONFIG_SENSORS_ADSP=y
 CONFIG_MSM_RTB=y
 CONFIG_MSM_RTB_SEPARATE_CPUS=y
 CONFIG_MSM_CACHE_ERP=y
-#CONFIG_MSM_L1_ERR_PANIC=y
+CONFIG_MSM_L1_ERR_PANIC=y
 CONFIG_MSM_L1_RECOV_ERR_PANIC=y
 CONFIG_MSM_L1_ERR_LOG=y
-#CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS=y
-#CONFIG_MSM_L2_ERP_PORT_PANIC=y
+CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS=y
+CONFIG_MSM_L2_ERP_PORT_PANIC=y
 CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 CONFIG_MSM_CACHE_DUMP=y
 CONFIG_MSM_CACHE_DUMP_ON_PANIC=y
@@ -379,7 +379,6 @@ CONFIG_DVB_CORE=m
 # CONFIG_MSM_CAMERA is not set
 CONFIG_IMX135=y
 CONFIG_GN_SUNNY_OV4688=y
-
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_EEPROM=y
 CONFIG_MSM_CPP=y
@@ -388,7 +387,6 @@ CONFIG_MSM_CSI30_HEADER=y
 CONFIG_MSM_CSIPHY=y
 CONFIG_MSM_CSID=y
 CONFIG_MSM_ISPIF=y
-#CONFIG_S5K3L1YX=y  //remove by zhaocuiqin for camera 2014-8-12
 CONFIG_MSMB_CAMERA=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_VIDC_V4L2=y
@@ -540,28 +538,27 @@ CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
 # CONFIG_SYSRQ_SCHED_DEBUG is not set
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
-#remove by yezg for UX performance 2014-8-12
-#CONFIG_DEBUG_KMEMLEAK=y
-#CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=4000
-#CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=y
-#CONFIG_DEBUG_SPINLOCK=y
-#CONFIG_DEBUG_MUTEXES=y
-#CONFIG_DEBUG_ATOMIC_SLEEP=y
-#CONFIG_DEBUG_STACK_USAGE=y
+CONFIG_DEBUG_KMEMLEAK=y
+CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=4000
+CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=y
+CONFIG_DEBUG_SPINLOCK=y
+CONFIG_DEBUG_MUTEXES=y
+CONFIG_DEBUG_ATOMIC_SLEEP=y
+CONFIG_DEBUG_STACK_USAGE=y
 CONFIG_DEBUG_INFO=y
-#CONFIG_DEBUG_MEMORY_INIT=y
-#CONFIG_DEBUG_LIST=y
-#CONFIG_FAULT_INJECTION=y
-#CONFIG_FAIL_PAGE_ALLOC=y
-#CONFIG_FAULT_INJECTION_DEBUG_FS=y
-#CONFIG_FAULT_INJECTION_STACKTRACE_FILTER=y
-#CONFIG_DEBUG_PAGEALLOC=y
-#CONFIG_CPU_FREQ_SWITCH_PROFILER=y
+CONFIG_DEBUG_MEMORY_INIT=y
+CONFIG_DEBUG_LIST=y
+CONFIG_FAULT_INJECTION=y
+CONFIG_FAIL_PAGE_ALLOC=y
+CONFIG_FAULT_INJECTION_DEBUG_FS=y
+CONFIG_FAULT_INJECTION_STACKTRACE_FILTER=y
+CONFIG_DEBUG_PAGEALLOC=y
+CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
 CONFIG_DEBUG_USER=y
-#CONFIG_DEBUG_LL=y
-#CONFIG_EARLY_PRINTK=y
+CONFIG_DEBUG_LL=y
+CONFIG_EARLY_PRINTK=y
 CONFIG_PID_IN_CONTEXTIDR=y
 CONFIG_DEBUG_SET_MODULE_RONX=y
 CONFIG_KEYS=y
