MDSS & GN Config update

--- a/arch/arm/boot/dts/dsi-panel-sharp-r63419-dualmipi1-cmd.dtsi
+++ b/arch/arm/boot/dts/dsi-panel-sharp-r63419-dualmipi1-cmd.dtsi
@@ -54,11 +54,60 @@
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
 		qcom,mdss-dsi-te-pin-select = <1>;
-                qcom,mdss-dsi-te-v-sync-rd-ptr-irq-line = <0x2c>;
-                qcom,mdss-dsi-te-v-sync-continues-lines = <0x3c>;
-                qcom,mdss-dsi-te-dcs-command = <1>;
-                qcom,mdss-dsi-te-check-enable;
-                qcom,mdss-dsi-te-using-te-pin;
-		qcom,ulps-enabled; 
+		qcom,mdss-dsi-te-v-sync-rd-ptr-irq-line = <0x2c>;
+		qcom,mdss-dsi-te-v-sync-continues-lines = <0x3c>;
+		qcom,mdss-dsi-te-dcs-command = <1>;
+		qcom,mdss-dsi-te-check-enable;
+		qcom,mdss-dsi-te-using-te-pin;
+		qcom,mdss-dsi-on-command = [
+			29 01 00 00 00 00 02 
+				b0 00
+			29 01 00 00 00 00 02 
+				d6 01
+			29 01 00 00 00 00 02
+        B3 08
+			29 01 00 00 00 00 08
+        ba b5 32 41 64 23 a0 a0
+			29 01 00 00 00 00 24
+        c1 04 61 00 5f 90 ff 51 02 ff ff ff 5d 63 ac b9 ff 3f 7c 41
+				fd ff cb f8 00 00 00 00 00 02 00 22 00 04 c7 51
+			29 01 00 00 00 00 14
+        c8 01 02 ff 00 fe c8 00 02 ff 00 fe b0 00 02 ff 00 fe fc 00
+			29 01 00 00 00 00 25
+			  CA A1 A0 A0 B0 B0 A0 A0 0C 20 00 94 00 00 00 00 00 00 F0
+			  	 10 4A 00 FF 00 FF 0C 0C 20 10 3F 3F 10 10 3F 3F 3F 3F
+			29 01 00 00 00 00 10
+				cb e6 e0 c7 63 00 00 00 00 40 00 80 00 e8 00 00
+			/* Set Column address */
+			39 01 00 00 00 00 05 
+				2a 00 00 05 9f
+			39 01 00 00 00 00 05 
+				2b 00 00 09 ff
+			/* Set page address */
+			15 01 00 00 00 00 02 
+				35 00
+			/* Set tear on */
+			15 01 00 00 00 00 02 
+				51 ff
+			/* write display brightness */
+			15 01 00 00 00 00 02 
+				53 24
+			 /* write control brightness */
+			15 01 00 00 00 00 02 
+				55 83
+			/* CABC brightness */
+			29 01 00 00 00 00 02 
+				b0 03
+			05 01 00 00 10 00 02
+				29 00
+			/* Set display on, wait 16ms */
+			05 01 00 00 78 00 02 
+				11 00
+			];
+		qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
+		qcom,mdss-dsi-off-command = [05 01 00 00 32 00 02 28 00
+					05 01 00 00 78 00 02 10 00];
+		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
+		qcom,ulps-enabled;
 	};
 };
