msm: mdss: Add panel status command for Sharp

--- a/arch/arm/boot/dts/dsi-panel-sharp-r63419-dualmipi0-cmd.dtsi
+++ b/arch/arm/boot/dts/dsi-panel-sharp-r63419-dualmipi0-cmd.dtsi
@@ -56,6 +56,7 @@
 		qcom,mdss-dsi-te-pin-select = <1>;
 		qcom,mdss-dsi-wr-mem-start = <0x2c>;
 		qcom,mdss-dsi-wr-mem-continue = <0x3c>;
+		qcom,panel-roi-alignment = <2 2 2 2 0 0>;
 		qcom,mdss-dsi-te-dcs-command = <1>;
 		qcom,mdss-dsi-te-check-enable;
 		qcom,mdss-dsi-te-using-te-pin;
@@ -108,6 +109,8 @@
 		qcom,mdss-dsi-off-command = [05 01 00 00 32 00 02 28 00
 					05 01 00 00 78 00 02 10 00];
 		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
+		qcom,mdss-dsi-panel-status-command = [06 01 00 01 05 00 02 0A 08];
+		qcom,mdss-dsi-panel-status-command-state = "dsi_lp_mode";
 		qcom,ulps-enabled;
 	};
 };
