--- a/arch/arm/boot/dts/msm8974-mdss.dtsi
+++ b/arch/arm/boot/dts/msm8974-mdss.dtsi
@@ -219,13 +219,22 @@
 		reg = 	<0xfd922e00 0x1f8>,
 			<0xfd923100 0x2b0>,
 			<0xfdf30000 0x108>;
-/*		reg-names = "dsi_ctrl", "dsi_phy", "mmss_misc_phys";
+		reg-names = "dsi_ctrl", "dsi_phy", "mmss_misc_phys";
 		gdsc-supply = <&gdsc_mdss>;
 		vdda-supply = <&pm8941_l2>;
 		vdd-supply = <&pm8941_l22>;
-		vddio-supply = <&pm8941_l12>; */
+		vddio-supply = <&pm8941_l12>;
 		qcom,mdss-fb-map = <&mdss_fb0>;
 		qcom,mdss-mdp = <&mdss_mdp>;
+				qcom,platform-reset-gpio = <&pm8941_gpios 19 0>;
+		qcom,platform-enable-gpio = <&msmgpio 58 0>;
+/*Gionee xiangzhongg 2014-04-12 add for tps65132 -5v enable begin*/
+		qcom,tps-enable-gpio = <&msmgpio 46 0>;
+/*Gionee xiangzhongg 2014-04-12 add for tps65132 -5v enable end*/
+/*Gionee xiangzhongg 2014-04-30 add for 1v8 control gpio begin*/
+		qcom,iovcc-enable-gpio = <&msmgpio 53 0>;
+/*Gionee xiangzhongg 2014-04-30 add for 1v8 control gpio begin*/
+		qcom,platform-te-gpio = <&msmgpio 12 0>;
 		qcom,platform-strength-ctrl = [ff 06];
 		qcom,platform-bist-ctrl = [00 00 b1 ff 00 00];
 		qcom,platform-regulator-settings = [03 09 03 00 20 00 01];
@@ -238,7 +247,7 @@
 		qcom,mmss-ulp-clamp-ctrl-offset = <0x14>;
 		qcom,mmss-phyreset-ctrl-offset = <0x108>;
 
-/*		qcom,core-supply-entries {
+		qcom,core-supply-entries {
 			#address-cells = <1>;
 			#size-cells = <0>;
 
@@ -293,7 +302,7 @@
 				qcom,supply-disable-load = <100>;
 				qcom,supply-post-on-sleep = <5>;
 			};
-		}; */
+		};
 	};
 
 	mdss_hdmi_tx: qcom,hdmi_tx@fd922100 {
